--- a/1-8.html
+++ b/1-8.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="jp">
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <rink rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>1-8</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
